Updating class and method names